public_html/stylesheet.css
@import url('https://fonts.googleapis.com/css?family=Muli');
@import url('https://fonts.googleapis.com/css?family=Londrina+Outline');

html, body {
	height: 100%;
	width: 100%;
}

header {
	position: static;
	width: 100%;
	height: 100%;
	background: url(images/nm-sky.jpg) center;
	background-size: cover;
}

.navbar {
	background: black;
}
.padding {
	margin-top: 4em;
}

#zia {
	height: 43px;
	width: 43px;
}

.garcia {
	font-size: 90px;
	margin-top: .15em;
	margin-bottom: .5em;
	color: azure;
	font-family: 'Londrina Outline', cursive;
}

.web {
	margin-bottom: 1em;
	color: azure;
	font-family: 'Londrina Outline', cursive;
}

.about-link {
	margin-bottom: 4%;
}

.portfolio-link {
	margin-bottom: 4%;
}

.contact-link {
	margin-bottom: 4%;
}

.abt-me {
	margin-bottom: .25em;
	color: azure;
	text-align: right;
}

.about-me {
	background: #0D0D0D;
}

.story {
	color: #9C9B93;
	font-family: 'Muli', sans-serif;
}

.dd-fluid {
	margin-top: .25em;
	margin-bottom: 4em;
}

.port-section {
	margin-top: 1.5em;
}

.card{
	margin-left: 2em;
	margin-right: 8.25%;
	margin-bottom: 10em;
}

.img-fluid {
	margin-top: 1em;
}

#contact-form {
	background: #0D0D0D;
}

#cm {
	color: azure;
}

label {
	color: azure;
}

footer {
	padding: 1em;
	display: flex;
	background: #0D0D0D;
}

#myBtn {
	display: none;
	position: fixed;
	bottom: 20px;
	right: 30px;
	z-index: 99;
	border: none;
	outline: none;
	background-color: black;
	color: white;
	cursor: pointer;
	padding: 15px;
	border-radius: 10px;
	font-size: 18px;
}

#myBtn:hover {
	background-color: #555;
}

